--- a/elbalcon/tsconfig.json
+++ b/elbalcon/tsconfig.json
@@ -5,6 +5,7 @@
     "lib": ["ES2020", "DOM", "DOM.Iterable"],
     "module": "ESNext",
     "skipLibCheck": true,
+    "noImplicitAny": false,
 
     /* Bundler mode */
     "moduleResolution": "bundler",
@@ -19,9 +20,11 @@
         "src/*"
       ],
       "components/*":["./src/components/*"],
-      "interfaces/*":["/src/data/interfaces","/src/data/interfaces/*" ],
+      "interfaces/*":["./src/data/interfaces","./src/data/interfaces/*" ],
       "objects/*":["./src/data/objects/*"],
-      "utilities/*":["./src/data/utilities"]
+      "utilities/*":["./src/data/utilities"],
+      "pages/*":["./src/pages/*", "./src/pages/"],
+   
     },
 
     /* Linting */
