--- a/API/docker-compose.yml
+++ b/API/docker-compose.yml
@@ -19,3 +19,23 @@ services:
       - PGADMIN_DEFAULT_PASSWORD=limonagrio123
     ports:
       - 5050:80
+
+  mysql:
+    image: mysql:5
+    environment:
+      - MYSQL_DATABASE=db_elbalcon
+      - MYSQL_USER=elbalcon
+      - MYSQL_ROOT_PASSWORD=limonagrio123
+      - MYSQL_ROOT_PORT=3306
+    ports:
+      - 3306:3306
+    volumes:
+      - ./mysql_data:/var/lib/mysql
+
+  phpmyadmin:
+    image: phpmyadmin/phpmyadmin
+    environment:
+      - MYSQL_ROOT_PASSWORD=limonagrio123
+      - PMA_HOST=mysql
+    ports:
+      - 8080:80
