--- a/API/package.json
+++ b/API/package.json
@@ -17,8 +17,16 @@
     "@faker-js/faker": "^7.6.0",
     "@hapi/boom": "^10.0.1",
     "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
     "joi": "^17.9.2",
+    "mariadb": "^3.2.2",
+    "mysql2": "^3.6.5",
+    "oracledb": "^6.2.0",
     "pg": "^8.11.3",
+    "pg-hstore": "^2.3.4",
+    "sequelize": "^6.35.2",
+    "sqlite3": "^5.1.6",
+    "tedious": "^16.6.1",
     "xmlhttprequest": "^1.8.0"
   },
   "devDependencies": {
