--- a/API/package.json
+++ b/API/package.json
@@ -6,7 +6,11 @@
   "scripts": {
     "dev": "nodemon api/index.js",
     "start": "node api/index.js",
-    "lint": "eslint"
+    "lint": "eslint",
+    "migrations:generate": "sequelize-cli migration:generate --name",
+    "migrations:run": "sequelize-cli db:migrate",
+    "migrations:revert": "sequelize-cli db:migrate:undo",
+    "migrations:delete": "sequelize-cli db:migrate:undo:all"
   },
   "keywords": [
     "javascript"
@@ -35,6 +39,7 @@
     "eslint-plugin-prettier": "^4.2.1",
     "express": "^4.18.2",
     "nodemon": "^2.0.22",
-    "prettier": "^2.8.7"
+    "prettier": "^2.8.7",
+    "sequelize-cli": "^6.6.2"
   }
 }
