--- a/API/package.json
+++ b/API/package.json
@@ -24,6 +24,7 @@
     "dotenv": "^16.3.1",
     "joi": "^17.9.2",
     "mariadb": "^3.2.2",
+    "multer": "^1.4.5-lts.1",
     "mysql2": "^3.6.5",
     "oracledb": "^6.2.0",
     "pg": "^8.11.3",
